# budgetui

./: .gitignore  Cargo.toml  GUIDE.md  PARKING_LOT.md  README.md
.github/workflows/: rust.yml
src/: main.rs  run.rs
src/categorize/: mod.rs  tests.rs
src/db/: mod.rs  schema.rs  tests.rs
src/import/: csv_import.rs  csv_import_tests.rs  detect.rs  detect_tests.rs  mod.rs
src/models/: account.rs  budget.rs  category.rs  import_rule.rs  mod.rs  tests.rs  transaction.rs
src/run/: cli.rs  mod.rs  tui.rs
src/ui/: app.rs  commands.rs  mod.rs  render.rs  theme.rs  util.rs  util_tests.rs
src/ui/screens/: accounts.rs  budgets.rs  categories.rs  dashboard.rs  import.rs  mod.rs  transactions.rs
